<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.houseconnect.employerModule.ui.home.EmployerHome"
        android:label="@string/menu_home"
        tools:layout="@layout/home_employer" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.houseconnect.employerModule.ui.gallery.EmployerHistory"
        android:label="@string/menu_gallery"
        tools:layout="@layout/history_employer" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.houseconnect.employerModule.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>