<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".employeeModule.EditProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/rel_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/back_btn"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="start|center_vertical"
                android:drawableLeft="@drawable/back_arrow"
                android:drawableTint="@color/black"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_marginTop="20dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/nav_header_desc"
                android:background="@drawable/circular_background"
                android:src="@drawable/me"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_edit_btn"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentEnd="true"
                android:drawableTint="@color/black"
                android:drawableLeft="@drawable/ic_edit"
                android:layout_marginEnd="10dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel_2"
            android:layout_below="@+id/rel_1">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"
                android:text="@string/nav_header_title"
                />

            <TextView
                android:id="@+id/number"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/username"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/phone"
                />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pending_rel_layout"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
         android:layout_centerInParent="true"
            android:layout_marginEnd="10dp"
            android:visibility="gone"
            android:layout_below="@+id/rel_2">

            <TextView
                android:id="@+id/activate_status_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="serif-monospace"

                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/pending_activation"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/activate_rel_layout"
            android:visibility="visible"
            android:layout_below="@+id/rel_2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activate_section"
                android:layout_marginTop="10dp"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:layout_gravity="start|center_vertical"
                android:text="Activate Account"
                android:drawableTint="@color/black"
                android:layout_marginStart="10dp"/>






                <AutoCompleteTextView
                    android:id="@+id/location_auto_complete"
                    android:hint="Enter work location"
                    android:layout_below="@+id/activate_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />




                <EditText

                    android:id="@+id/id_txt"
                    android:hint="Enter national Id"
                    android:layout_marginTop="10dp"

                    android:layout_below="@+id/location_auto_complete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />






            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/job_label"
                android:layout_below="@id/id_txt"
                android:text="Select job type"
                android:layout_marginTop="8dp"/>


            <Spinner
                android:id="@+id/select_job_type"
                android:layout_width="match_parent"
                android:layout_below="@+id/job_label"
                android:layout_marginTop="5dp"
                android:layout_height="49dp"/>

            <Button
                android:id="@+id/uploadFrontImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:layout_below="@+id/select_job_type"
                android:layout_marginTop="8dp"
                android:text="Upload Front Image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/front_image_name"
                android:layout_marginTop="16dp"
                android:layout_marginStart="10dp"
                android:layout_alignParentEnd="true"

                android:layout_below="@id/select_job_type"

              />


            <!-- Upload Back Image Button -->
            <Button
                android:id="@+id/uploadBackImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uploadFrontImageButton"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/grey"
                android:text="Upload Back Image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/back_image_name"
                android:layout_marginTop="16dp"
                android:layout_marginStart="10dp"
                android:layout_below="@id/uploadFrontImageButton"
                android:layout_alignParentEnd="true"

                />


            <Button
                android:id="@+id/activate_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uploadBackImageButton"
                android:layout_marginTop="8dp"
                android:layout_centerHorizontal="true"
                android:text="Activate"/>


        </RelativeLayout>





    </RelativeLayout>
</ScrollView>
